<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WhichWay</string>
    <string name="hello">Hello WhichWay!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to WhichWay</string>
    <string name="enlem">Latitude:</string>
    <string name="boylam">Longitude:</string>
    <string name="unknown">Unknown</string>
    <string name="crdX">X:</string>
    <string name="textView4">X:</string>
    <string name="none">None</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>
    <string name="heading">Heading: None</string>
    <string name="angleDiff">AngleDif: None</string>
    <string name="search">Search</string>
    <string name="savToFav">Add to Favorites</string>
    <string name="chsFav">Saved Locations</string>
    <string name="gpsLoc">GPS Coordinates</string>
    <string name="drctn">Direction</string>
    <string name="distance">Distance: Unknown</string>
    <string name="addtofav">Add to Favorites</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="locationName">Location</string>
    <string name="addressOrCoordinate">Address or Coordinate</string>
    <string name="current">Current</string>
    <string name="searched">Searched</string>
    <string name="favorites">Favorites</string>
    <string name="add">Add</string>
</resources>