<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textLat"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:text="@string/boylam"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/compass" />

    <ImageView
        android:id="@+id/needle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/compass"
        android:layout_alignTop="@+id/compass"
        android:scaleType="fitXY"
        android:src="@drawable/needle" />

    <TextView
        android:id="@+id/angle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvHeading"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/tvHeading"
        android:text="@string/angleDiff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/current"
        android:layout_marginTop="12dp"
        android:text="@string/enlem"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:text="@string/heading" />

    <EditText
        android:id="@+id/textSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/addressOrCoordinate"
        android:inputType="text"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textSearch"
        android:layout_toRightOf="@+id/textSearch"
        android:onClick="onClick_Search"
        android:text="@string/search" />

    <Button
        android:id="@+id/chsFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/saveLoc"
        android:layout_below="@+id/saveLoc"
        android:onClick="onClick_GetFavorites"
        android:text="@string/chsFav" />

    <TextView
        android:id="@+id/current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:text="@string/gpsLoc"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/srchCoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSearch"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="12dp"
        android:text="@string/drctn"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/srchCoor"
        android:layout_marginTop="12dp"
        android:text="@string/enlem"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:text="@string/boylam"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/geoLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TextView01"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/TextView02"
        android:text="@string/none"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/geoLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/geoLat"
        android:layout_alignTop="@+id/TextView02"
        android:text="@string/none"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/saveLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/srchCoor"
        android:layout_toRightOf="@+id/btnSearch"
        android:onClick="onClick_AddToFavorites"
        android:text="@string/savToFav" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/angle"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/angle"
        android:text="@string/distance" />

    <TextView
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/distance"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/distance"
        android:text="Debug" />

</RelativeLayout>