<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/locationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/locationName"
        android:inputType="textEmailAddress" />

    <RadioGroup
		android:id="@+id/radioGroup"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    	
    	<RadioButton
        	android:id="@+id/radioCurrent"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/current" />

    	<RadioButton
    	    android:id="@+id/radioSearched"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/searched" />
    </RadioGroup>

</LinearLayout>